# Parallel-Examples

./: .gitignore  HelloOpenMP.c  My_MPI_Comm_size  README.md  circular_shift.c  hello_world.c  serial_laplace_solver.c  stencil_opt2.c  stencil_opt3.c  stencil_opt4.c  synchronization.c  timer.c  timer.h  variable.c  vecadd_opt1.c
CUDA/: README.md
CUDA/DeepLearning/: README.md  conv2d_cuda.cu
CUDA/Histogram/: Makefile  README.md  histo_host.cu
CUDA/Histogram/data/: README.md
CUDA/deepLearning/: conv2d_cudnn.cu  conv2d_pytorch.py  fc_layer.cu
CUDA/histogram/: histo_host  histo_kernel.cu
CUDA/matrixMultiply/: generate_matrices.py  matrixMultiply  matrixMultiply.cu
CUDA/matrixMultiply/data/: A.txt  B.txt  C.txt  C_answer.txt
CUDA/matrixMultiplyShared/: matrixMultiplyShared.cu
CUDA/reduction/: reduction_kernels.cu
CUDA/vecAdd/: vecAdd  vecAdd.cu
CUDA/vecAdd/data/: input2.txt
MPI/: My_MPI_Comm_size.c  README.md  finding_pi.c  parallel_laplace_solver.c  send_and_receive.c
OpenMP/: README.md  serial_sum_novec.c
OpenMP/stencil/: CMakeLists.txt  cmake_clean.cmake  stencil_opt6.c
OpenMP/vecadd/: CMakeLists.txt  vecadd_opt.c  vecadd_opt2.c
convKernel/: 1dConvKernel.cu  tiled1dConvKernel.cu
